--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,200;0,300;0,500;0,700;1,200;1,300;1,500;1,700&display=swap');
+
 html {
   scroll-behavior: smooth;
 }
@@ -7,7 +9,8 @@ html {
     margin: 0;
     padding: 0;
     background: linear-gradient(115deg, #FFFCF5 50%, #6F503A 50%);
-}
+    font-family: 'Raleway', sans-serif;
+  }
 
 #main {
   display: flex;
@@ -19,6 +22,10 @@ header a {
   margin: 0 10px;
 }
 
+h1 {
+  margin: 10px;
+}
+
 /*-----------------------nav-----------------------*/
 #contact_btn {
 	justify-content: flex-end;
@@ -28,6 +35,7 @@ header a {
 	color: white;
   border-radius: 7px;
   cursor: pointer;
+  font-family: 'Raleway', sans-serif;
 }
 
 nav {
@@ -50,7 +58,7 @@ nav {
 /*------------------------me-----------------------*/
 
 #my_details {
-  padding: 20px 0px 50px 0px;
+  padding: 10px 0px 0px 0px;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -65,13 +73,16 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-size: 35px;
 }
 
 /*about me*/
 
-/* .wrap_collapsible {
-  display: flex;
-} */
+.wrap_collapsible {
+display: flex;
+flex-direction: column;
+align-items: center;
+} 
 
 input[type='checkbox'] {
   display: none;
@@ -87,6 +98,8 @@ input[type='checkbox'] {
   background: #fbf5e3;
   border-radius: 7px;
   transition: all 0.25s ease-out;
+  padding: 5px;
+  margin-bottom: 20px;
   cursor: pointer;
 }
 
@@ -101,6 +114,7 @@ input[type='checkbox'] {
   background: #fbf5e3;
   border-bottom: 1px solid #f3e8c8;
   margin-left: 0px;
+  margin-bottom: 20px;
   width: 400px;
   border-radius: 7px;
   padding: 10px;
@@ -118,10 +132,9 @@ input[type='checkbox'] {
 }
 
 /*----------------------work-----------------------*/
-
 #my_work {
   display: flex;
-  justify-content: center;
+  justify-content: start;
   flex-direction: column;
 }
 
@@ -129,6 +142,9 @@ input[type='checkbox'] {
 text-align: center;
 display: flex;
 justify-content: center;
+font-family: 'Raleway', sans-serif;
+font-size: 40px;
+margin-top: 100px;
 }
 
 .work_links {
@@ -147,13 +163,24 @@ justify-content: center;
   padding: 10px;
 }
 
+.pages a:hover {
+  background-color: #32312F;
+}
+
 /*----------------------form-----------------------*/
 
 #contact_form {
+  display: flex;
+  flex-direction: column;
   text-align: center;
   background-color: #A0806D;
   opacity: 98%;
   padding: 10px 0px 10px 0px;
+  align-items: center;
+}
+
+form {
+  width: 50%;
 }
 
 .formfields {
@@ -163,10 +190,10 @@ justify-content: center;
   flex-direction: row;
 }
 
-.formfields input[type="text"],
-.formfields textarea {
+.formfields input[type="text"], .formfields textarea {
   width: 50%;
   border-radius: 7px;
+  background-color: #fbf5e3;
 }
 
 /*----------------------footer--------------------*/
@@ -197,14 +224,30 @@ footer {
     padding-top: 5%;
   }
 
+  #nameSO {
+    font-size: 3rem;
+  } 
+
+  .collapsible-content {
+    display: flex;
+    width: 90%;
+  }
+
   #my_work {
     order: 2;
-    margin-top: 50px;
     margin-bottom: 20px;
     display: flex;
+    }
+
+    #recent_work {
+      margin-top: 10%;
+    }
+
+    form {
+      width: 100%;
     }
 }
 
 /* *{
   border: 1px solid red;
-}  */
+}   */
